# lumencode

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  lumencode.desktop.in
docs/: cli-testing-strategy.md  implementation-log.md  spec.md
src/: filesystemmodel.cpp  filesystemmodel.h  lumencode-cli.cpp  main.cpp  projectcontroller.cpp  projectcontroller.h  resources.qrc  symbolparser.cpp  symbolparser.h
src/contents/ui/: Main.qml
tests/fixtures/baseline/: manifest.json
tests/fixtures/baseline/cpp_basic/: sample.cpp
tests/fixtures/baseline/csharp_basic/: Sample.cs
tests/fixtures/baseline/csharp_recovery/: Broken.cs
tests/fixtures/baseline/html_css/: index.html  styles.css
tests/fixtures/baseline/html_script/: app.js  index.html
tests/fixtures/baseline/java_basic/: Sample.java
tests/fixtures/baseline/java_recovery/: Broken.java
tests/fixtures/baseline/js_commonjs/: alias.js  helper.js  main.js
tests/fixtures/baseline/json_package/: package.json
tests/fixtures/baseline/objc_basic/: Sample.m
tests/fixtures/baseline/php_basic/: helper.php
tests/fixtures/baseline/php_recovery/: Broken.php
tests/fixtures/baseline/python_basic/: sample.py
tests/fixtures/baseline/python_recovery/: broken.py
tests/fixtures/baseline/qml_basic/: Sample.qml
tests/fixtures/baseline/rust_basic/: main.rs
tests/fixtures/baseline/rust_recovery/: broken.rs
tests/fixtures/baseline/swift_basic/: App.swift
tests/fixtures/baseline/ts_module/: alias.ts  helper.ts  main.ts
tests/fixtures/baseline/ts_recovery/: broken.ts
tools/: regression_sweep.py
